@@ -1,3 +1,15 @@
+2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* include/cyg_ass.h (CYG_CHECK_FUNC_PTRC): Define with const pointer
+	arguments.
+	(CYG_CHECK_DATA_PTRC): Ditto. 
+	(CYG_CHECK_FUNC_PTR): Ditto. 
+	(CYG_CHECK_DATA_PTR): Ditto. 
+	* src/null.cxx: Define cyg_check_data/func_ptr() with const args.
+	* src/buffer.cxx: Ditto.
+	* src/fancy.cxx: Ditto.
+	* src/simple.cxx: Ditto.
+
 2002-07-18  Gary Thomas  <gary@chez-thomas.org>
 
 	* include/diag.h: 
